# midi_bpm_detection

./: .gitignore  AGENTS.md  CI.md  Cargo.toml  LICENSE  README.md  beat-detector-2e51a8fb8a84ec52_bg.wasm  beat-detector-3bf3b1941e6e1965.js  beat-detector-3bf3b1941e6e1965_bg.wasm  beat-detector-594cac6e242750e6.js  beat-detector-594cac6e242750e6_bg.wasm  beat-detector-6195d6ca7a8cbbe2.js  beat-detector-6195d6ca7a8cbbe2_bg.wasm  beat-detector-64203d6e572b3d62.js  beat-detector-64203d6e572b3d62_bg.wasm  beat-detector-689a964addbeb714_bg.wasm  beat-detector-897fdcdd7a14db8b.js  beat-detector-897fdcdd7a14db8b_bg.wasm  beat-detector-eee6cb9bf5f46bb3.js  beat-detector-eee6cb9bf5f46bb3_bg.wasm  index.html  rustfmt.toml  sw.js
crates/bpm_detection_core/: Cargo.toml
crates/bpm_detection_core/src/: bpm.rs  bpm_detection.rs  fake_midi_output.rs  lib.rs  midi_in.rs  midi_input_port.rs  midi_messages.rs  normal_distribution.rs  note_events.rs  parameters.rs  sysex.rs  worker.rs  worker_event.rs
crates/bpm_detection_midi/: Cargo.toml
crates/bpm_detection_midi/src/: lib.rs  midi_in.rs  midi_output.rs  worker.rs  worker_command.rs  worker_event.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: config.rs  controller.rs  device_selection.rs  lib.rs  live_parameters.rs
crates/errors/: Cargo.toml  build.rs
crates/errors/src/: lib.rs  logging.rs  panic_handler.rs
crates/gui/: Cargo.toml
crates/gui/src/: add_slider.rs  app.rs  app_builder.rs  application_parameters.rs  config.rs  config_ui.rs  gui_remote.rs  lib.rs
crates/midi/: Cargo.toml
crates/midi-bpm-detector-plugin/: .gitignore  Cargo.toml  README.md  bundler.toml
crates/midi-bpm-detector-plugin/config/: base_config.toml
crates/midi-bpm-detector-plugin/src/: bpm_detector_configuration.rs  config.rs  gui.rs  lib.rs  main.rs  parameter_sync.rs  params.rs  plugin_parameters.rs  task_executor.rs
crates/midi-bpm-detector-plugin/xtask/: Cargo.toml
crates/midi/src/: bpm.rs  bpm_detection.rs  fake_midi_output.rs  lib.rs  midi_in.rs  midi_input_port.rs  midi_messages.rs  midi_output.rs  normal_distribution.rs  sysex.rs  worker.rs  worker_event.rs
crates/tui/: Cargo.toml
crates/tui/config/: base_config.toml
crates/tui/src/: action.rs  app.rs  cli.rs  config.rs  lib.rs  live_parameters.rs  mode.rs  tui.rs
crates/tui/src/components/: home.rs  midi_display.rs  mod.rs  select_device.rs
crates/tui/src/layout/: mod.rs
crates/tui/src/lifecycle/: signals.rs
crates/tui/src/services/: mod.rs
crates/tui/src/services/crossterm/: mod.rs
crates/tui/src/services/midi/: mod.rs
crates/tui/src/services/screens/: mod.rs
crates/tui/src/utils/: dispatch.rs  mod.rs
crates/wasm/: Cargo.toml  index.html
crates/wasm/config/: base_config.toml
crates/wasm/src/: lib.rs  wasm.rs
rust/: .cross.toml  AGENTS.md  Cargo.toml  architecture.md  rustfmt.toml
rust/.cargo/: config.toml
rust/agent-guides/: architecture.md  documentation.md  tooling.md
rust/crates/bpm/bpm_detection_config/: Cargo.toml
rust/crates/bpm/bpm_detection_config/src/: lib.rs
rust/crates/bpm/bpm_detection_core/: Cargo.toml
rust/crates/bpm/bpm_detection_core/src/: bpm_detection.rs  bpm_detection_receiver.rs  lib.rs  normal_distribution.rs  num_traits_chrono.rs  parameters.rs
rust/crates/bpm/bpm_detection_midi/: Cargo.toml
rust/crates/bpm/bpm_detection_midi/src/: midi_output_trait.rs  worker.rs
rust/crates/bpm/domain/bpm_detection_config/: Cargo.toml
rust/crates/bpm/domain/bpm_detection_core/: Cargo.toml
rust/crates/bpm/gui/: Cargo.toml  build.rs
rust/crates/bpm/gui/src/: add_slider.rs  app.rs  app_builder.rs  application_parameters.rs  config.rs  gui_remote.rs  lib.rs
rust/crates/bpm/native-midi/bpm_detection_midi/: Cargo.toml
rust/crates/bpm_detection_core/: Cargo.toml
rust/crates/bpm_detection_core/src/: bpm_detection.rs  parameters.rs
rust/crates/bpm_detection_midi/: Cargo.toml
rust/crates/bpm_detection_midi/src/: midi_in.rs  midi_input_port.rs  worker.rs  worker_command.rs
rust/crates/desktop/: Cargo.toml
rust/crates/desktop/config/: base_config.toml
rust/crates/desktop/src/: config.rs  controller_runtime.rs  device_selection.rs  live_parameters.rs
rust/crates/desktop/tests/unit/: config.rs  (+3 more)
rust/crates/entrypoints/desktop/: Cargo.toml
rust/crates/entrypoints/midi-bpm-detector-plugin/: Cargo.toml  README.md
rust/crates/entrypoints/wasm/: Cargo.toml  Trunk.toml
rust/crates/errors/src/: lib.rs
rust/crates/foundation/: README.md
rust/crates/foundation/parameter/: Cargo.toml
rust/crates/foundation/parameter-nih-plug/: Cargo.toml
rust/crates/foundation/parameter-on-off/: Cargo.toml
rust/crates/foundation/parameter-on-off-nih-plug/: Cargo.toml
rust/crates/gui/: Cargo.toml
rust/crates/gui/src/: add_slider.rs  application_parameters.rs  callback_slot.rs  config.rs  config_ui.rs  gui_remote.rs  lib.rs
rust/crates/midi-bpm-detector-plugin/: Cargo.toml  README.md
rust/crates/midi-bpm-detector-plugin/config/: base_config.toml
rust/crates/midi-bpm-detector-plugin/src/: bpm_detector_configuration.rs  gui.rs  lib.rs  parameter_sync.rs  plugin_config.rs  plugin_parameter_adapters.rs  plugin_parameters.rs  task_executor.rs
rust/crates/midi-reset/: Cargo.toml
rust/crates/midi-reset/src/: main.rs
rust/crates/parameter/: Cargo.toml
rust/crates/parameter-nih-plug/: Cargo.toml
rust/crates/parameter-nih-plug/src/: lib.rs
rust/crates/parameter-on-off/: Cargo.toml
rust/crates/parameter-on-off/src/: lib.rs
rust/crates/parameter/macros/: Cargo.toml
rust/crates/parameter/src/: lib.rs
rust/crates/parameter_macros/: Cargo.toml
rust/crates/parameter_macros/src/: lib.rs
rust/crates/parameter_macros/tests/: diagnostics.rs  parameter_group.rs
rust/crates/support/errors/: Cargo.toml  build.rs
rust/crates/support/sync/: Cargo.toml
rust/crates/sync/src/: serializable_atomic.rs  wasm_mutex.rs
rust/crates/tools/midi-reset/: Cargo.toml
rust/crates/wasm/: Cargo.toml
rust/crates/wasm/assets/: sw.js
rust/crates/wasm/config/: base_config.toml
rust/crates/wasm/src/: lib.rs
rust/scripts/: dev.sh
(+175 files in other folders)
