[workspace]
resolver = "2"
members = [
    "crates/tui",
    "crates/errors",
    "crates/build",
    "crates/bpm_detection_core",
    "crates/gui",
    "crates/sync",
    "crates/parameter",
    "crates/wasm",
    "crates/midi-bpm-detector-plugin",
    "crates/midi-bpm-detector-plugin/xtask",
    "crates/midi-reset",
]
default-members = ["crates/tui", "crates/midi-reset"]

[workspace.lints.clippy]
pedantic = "warn"


[profile.release]
lto = "thin"
strip = true
codegen-units = 4

[workspace.dependencies]
coremidi = "0.8.0"
core-foundation-sys = "0.8.7"
