[workspace]
resolver = "2"
members = [
    "crates/desktop",
    "crates/errors",
    "crates/build",
    "crates/bpm_detection_core",
    "crates/bpm_detection_midi",
    "crates/gui",
    "crates/sync",
    "crates/parameter",
    "crates/wasm",
    "crates/midi-bpm-detector-plugin",
    "crates/midi-bpm-detector-plugin/xtask",
    "crates/midi-reset",
]
default-members = ["crates/desktop", "crates/midi-reset"]

[workspace.lints.clippy]
pedantic = "warn"


[profile.release]
lto = "thin"
strip = true
codegen-units = 4

[workspace.dependencies]
coremidi = "0.9.1"
core-foundation-sys = "0.8.7"
