[workspace]
resolver = "2"
members = [
    "crates/entrypoints/desktop",
    "crates/support/errors",
    "crates/support/build",
    "crates/bpm/bpm_detection_core",
    "crates/bpm/bpm_detection_midi",
    "crates/bpm/gui",
    "crates/support/sync",
    "crates/foundation/parameter",
    "crates/foundation/parameter/macros",
    "crates/foundation/parameter-on-off",
    "crates/foundation/parameter-on-off-nih-plug",
    "crates/foundation/parameter-nih-plug",
    "crates/foundation/parameter-nih-plug/macros",
    "crates/entrypoints/wasm",
    "crates/entrypoints/midi-bpm-detector-plugin",
    "crates/entrypoints/midi-bpm-detector-plugin/xtask",
    "crates/tools/midi-reset",
]
default-members = ["crates/entrypoints/desktop", "crates/tools/midi-reset"]

[workspace.lints.clippy]
pedantic = "warn"


[profile.release]
lto = "thin"
strip = true
codegen-units = 4

[workspace.dependencies]
coremidi = "0.9.1"
core-foundation-sys = "0.8.7"
