[package]
name = "errors"
version = "0.1.0"
edition = "2021"

[dependencies]
sync = { path = "../sync" }
build = { path = "../build" }

color-eyre = "0.6.2"
backtrace = "0.3.69"
strip-ansi-escapes = "0.2.0"
better-panic = "0.3.0"
tracing-error = "0.2.0"
env_logger = "0.11.1"
log = "0.4.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
minitrace = { version = "0.6.7" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
minitrace = { version = "0.6.7", features = ["enable"] }
human-panic = "2.0.2"

[build-dependencies]
serde_json = { version = "1.0.108", features = [] }

[lints]
workspace = true
