[package]
name = "errors"
version = "0.1.0"
edition = "2024"

[dependencies]
sync = { path = "../sync" }
build = { path = "../build" }

color-eyre = "0.6.5"
backtrace = "0.3.75"
strip-ansi-escapes = "0.2.1"
better-panic = "0.3.0"
env_logger = "0.11.8"
log = "0.4.27"

[target.'cfg(target_arch = "wasm32")'.dependencies]
minitrace = { version = "0.6.7" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
minitrace = { version = "0.6.7", features = ["enable"] }
human-panic = "2.0.3"

[build-dependencies]
serde_json = { version = "1.0.142", features = [] }

[lints]
workspace = true
