[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
errors = { path = "../errors" }
build = { path = "../build" }
sync = { path = "../sync" }
parameter = { path = "../parameter" }
bpm_detection_core = { path = "../bpm_detection_core" }

egui_plot = { version = "0.31.0" }

serde = { version = "1.0.195", features = ["derive"] }
atomic_refcell = "0.1.13"
derivative = "2.2.0"
atomic_float = "1.1.0"
num-traits = "0.2.19"
log = "0.4.20"
instant = { version = "0.1", features = ["wasm-bindgen"] }
web-sys = "0.3.77"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.31.1", default-features = false, features = ["wgpu", "persistence", "default_fonts"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
# "wgpu" is not available for firefox, therefore using glow
eframe = { version = "0.31.1", default-features = false, features = ["default_fonts", "glow"] }

[features]
default = ["on_off_widgets"]
on_off_widgets = []


[build-dependencies]
build = { path = "../build" }

[lints]
workspace = true
