[package]
name = "midi-bpm-detector-plugin"
version = "0.1.0"
edition = "2024"
authors = ["Vincent Alsteen <vincent.alsteen@gmail.com>"]
license = "Other licenses can be set in Cargo.toml, but using the project needs to be GPLv3 compliant to be able to use the VST3 exporter. Check Cargo.toml for more information."
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "Midi plugin that will estimate the BPM of the midi input"


[lib]
crate-type = ["cdylib", "lib"]


[dependencies]
errors = { path = "../errors" }
gui = { path = "../gui" }
midi = { path = "../midi" }
parameter = { path = "../parameter" }
sync = { path = "../sync" }

nih_plug = { git = "https://github.com/valsteen/nih-plug.git", rev = "9cb478550e245603c61dc888b15d1f8150aaa46d", features = ["assert_process_allocs", "standalone"] }
nih_plug_egui = { git = "https://github.com/valsteen/nih-plug.git", rev = "9cb478550e245603c61dc888b15d1f8150aaa46d" }

chrono = "0.4.34"
cpal = "0.15.2"
crossbeam = "0.8.4"
midir = "0.10.1"
num-traits = "0.2.18"
ringbuf = "0.4.7"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.9"

[lints]
workspace = true
