[package]
name = "midi-bpm-detector-plugin"
version = "0.1.0"
edition = "2024"
authors = ["Vincent Alsteen <vincent.alsteen@gmail.com>"]
license = "Other licenses can be set in Cargo.toml, but using the project needs to be GPLv3 compliant to be able to use the VST3 exporter. Check Cargo.toml for more information."
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "Midi plugin that will estimate the BPM of the midi input"


[lib]
crate-type = ["cdylib", "lib"]


[dependencies]
errors = { path = "../errors" }
gui = { path = "../gui" }
bpm_detection_core = { path = "../bpm_detection_core" }
parameter = { path = "../parameter" }
sync = { path = "../sync" }

nih_plug = { git = "https://github.com/valsteen/nih-plug.git", rev = "37fd84a222c61d02bb41737fad2b6020e165313d", features = ["assert_process_allocs", "standalone"] }
nih_plug_egui = { git = "https://github.com/valsteen/nih-plug.git", rev = "37fd84a222c61d02bb41737fad2b6020e165313d" }

chrono = "0.4.41"
cpal = "0.16.0"
crossbeam = "0.8.4"
midir = "0.10.2"
num-traits = "0.2.19"
ringbuf = "0.4.8"
serde = { version = "1.0.219", features = ["derive"] }
mimalloc = "0.1.47"

toml = "0.9.5"

[lints]
workspace = true
