[package]
name = "tui"
version = "0.1.0"
edition = "2024"
description = "BPM Detector TUI/GUI"
default-run = "bpm_detector_tui"

authors = ["Vincent Alsteen <vincent.alsteen@gmail.com>"]

[dependencies]
clap = { version = "4.4.11", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
config = "0.15.11"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
bitflags = "2.3"
derive_deref = "1.1.1"
futures = "0.3.30"
futures-util = "0.3.30"
ratatui = { version = "0.26.3", features = ["serde", "macros"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = "0.7.10"
mimalloc = "0.1.46"

itertools = "0.14.0"
toml = "0.8.8"
derivative = "2.2.0"
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }



errors = { path = "../errors" }
build = { path = "../build" }
bpm_detection_core = { path = "../bpm_detection_core" }
gui = { path = "../gui" }
parameter = { path = "../parameter" }
sync = { path = "../sync" }
log = { version = "0.4.20", features = [] }
instant = { version = "0.1", features = ["wasm-bindgen"] }

[lints]
workspace = true

[dev-dependencies]
pretty_assertions = "1.4.0"

[build-dependencies]
build = { path = "../build" }
