[package]
name = "tui"
version = "0.1.0"
edition = "2024"
description = "BPM Detector TUI/GUI"
default-run = "bpm_detector_tui"

authors = ["Vincent Alsteen <vincent.alsteen@gmail.com>"]

[dependencies]
clap = { version = "4.5.43", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
config = "0.15.13"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
bitflags = "2.9"
derive_deref = "1.1.1"
futures = "0.3.31"
futures-util = "0.3.31"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
mimalloc = "0.1.47"

itertools = "0.14.0"
toml = "0.9.5"
derivative = "2.2.0"
signal-hook = "0.3.18"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }



errors = { path = "../errors" }
build = { path = "../build" }
bpm_detection_core = { path = "../bpm_detection_core" }
gui = { path = "../gui" }
parameter = { path = "../parameter" }
sync = { path = "../sync" }
log = { version = "0.4.27", features = [] }
instant = { version = "0.1", features = ["wasm-bindgen"] }

[lints]
workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"

[build-dependencies]
build = { path = "../build" }
