[package]
name = "wasm"
version = "0.1.0"
edition = "2024"
default-run = "beat-detector"

[dependencies]
gui = { path = "../gui" }
midi = { path = "../midi" }
errors = { path = "../errors" }
parameter = { path = "../parameter" }

serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.9"
atomic_refcell = "0.1.13"
wasm-bindgen = "0.2"
# getrandom is transitively used by minitrace. This declaration is only necessary to enable the "js" feature.
getrandom = { package = "getrandom", version = "0.2.15", features = ["js"] }
derivative = "2.2.0"
chrono = { version = "0.4.34", features = ["wasmbind"] }
wasm-bindgen-futures = "0.4"
instant = "0.1.12"
futures = "0.3.30"
js-sys = "0.3.68"
web-sys = "0.3.68"

[dev-dependencies]
wasm-bindgen-test = "0.3.41"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "beat-detector"
path = "src/bin/main.rs"

