[package]
name = "wasm"
version = "0.1.0"
edition = "2024"
default-run = "beat-detector"

[dependencies]
gui = { path = "../gui" }
bpm_detection_core = { path = "../bpm_detection_core" }
errors = { path = "../errors" }
parameter = { path = "../parameter" }

serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
atomic_refcell = "0.1.13"
wasm-bindgen = "0.2"
# getrandom is transitively used by minitrace. This declaration is only necessary to enable the "js" feature.
getrandom = { package = "getrandom", version = "0.2.16", features = ["js"] }
derivative = "2.2.0"
chrono = { version = "0.4.41", features = ["wasmbind"] }
wasm-bindgen-futures = "0.4"
instant = "0.1.13"
futures = "0.3.31"
js-sys = "0.3.77"
web-sys = "0.3.77"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3.50"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "beat-detector"
path = "src/bin/main.rs"

