[package]
name = "bpm_detection_core"
version = "0.1.0"
edition = "2024"

[dependencies]
parameter = { path = "../parameter"}
parameter-on-off = { path = "../parameter-on-off" }


itertools = "0.15.0"
derivative = "2.2.0"
statrs = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
arraydeque = "0.5.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version="0.4.45" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version="0.4.45", features = ["wasmbind"]}

[lints]
workspace = true
