[package]
name = "desktop"
version = "0.1.0"
edition = "2024"
description = "Native desktop runtime for MIDI BPM detection"
default-run = "desktop"

[dependencies]
bpm_detection_config = { path = "../../bpm/bpm_detection_config" }
bpm_detection_core = { path = "../../bpm/bpm_detection_core" }
bpm_detection_midi = { path = "../../bpm/bpm_detection_midi" }
build = { path = "../../support/build" }
errors = { path = "../../support/errors" }
gui = { path = "../../bpm/gui" }
parameter = { path = "../../foundation/parameter" }
sync = { path = "../../support/sync" }

config = "0.15.24"
log = "0.4.33"
mimalloc = "0.1.52"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[dev-dependencies]
parameter-on-off = { path = "../../foundation/parameter-on-off" }
pretty_assertions = "1.4.1"

[build-dependencies]
build = { path = "../../support/build" }

[lints]
workspace = true
