[package]
name = "midi-bpm-detector-plugin"
version.workspace = true
edition = "2024"
authors = ["Vincent Alsteen <vincent.alsteen@gmail.com>"]
license = "MIT"
homepage = "https://github.com/valsteen/midi_bpm_detection"
description = "Midi plugin that will estimate the BPM of the midi input"

[features]
default = ["clap", "standalone"]
clap = []
standalone = ["nih_plug/standalone"]
vst3 = ["nih_plug/vst3"]

[lib]
crate-type = ["cdylib", "lib"]


[dependencies]
errors = { path = "../../support/errors" }
gui = { path = "../../bpm/gui" }
bpm_detection_config = { path = "../../bpm/domain/bpm_detection_config" }
bpm_detection_core = { path = "../../bpm/domain/bpm_detection_core" }
parameter = { path = "../../foundation/parameter" }
parameter-on-off = { path = "../../foundation/parameter-on-off" }
parameter-on-off-nih-plug = { path = "../../foundation/parameter-on-off-nih-plug", default-features = false }
parameter-nih-plug = { path = "../../foundation/parameter-nih-plug", default-features = false }
sync = { path = "../../support/sync" }

nih_plug = { git = "https://github.com/valsteen/nih-plug.git", rev = "3bb9d2ee6cf164ac1b9f5c8756ad29a99d818ac6", default-features = false, features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/valsteen/nih-plug.git", rev = "3bb9d2ee6cf164ac1b9f5c8756ad29a99d818ac6" }

chrono = "0.4.45"
cpal = "0.16.0"
crossbeam = "0.8.4"
midir = "0.11.0"
num-traits = "0.2.19"
ringbuf = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
mimalloc = "0.1.52"
wmidi = "4.0.11"

toml = "1.1.2"

[lints]
workspace = true
