[package]
name = "parameter"
version = "0.1.0"
edition = "2024"

[dependencies]

parameter_macros = { package = "parameter-macros", path = "macros" }

[[test]]
name = "diagnostics"
path = "tests/integration/diagnostics.rs"

[[test]]
name = "parameter_group"
path = "tests/integration/parameter_group.rs"

[lints]
workspace = true
