[package]
name = "parameter"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]

parameter_macros = { package = "parameter-macros", path = "macros" }

[[test]]
name = "diagnostics"
path = "tests/integration/diagnostics.rs"

[[test]]
name = "parameter_group"
path = "tests/integration/parameter_group.rs"

[lints]
workspace = true
