[package]
name = "bpm_detection_config"
version.workspace = true
edition = "2024"
license.workspace = true
rust-version = "1.92"

[dependencies]
parameter = { path = "../../../foundation/parameter" }
parameter-on-off = { path = "../../../foundation/parameter-on-off" }

derivative = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version="0.4.45" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version="0.4.45", features = ["wasmbind"]}

[lints]
workspace = true
