[package]
name = "bpm_detection_core"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
bpm_detection_config = { path = "../bpm_detection_config" }

itertools = "0.15.0"
statrs = "0.18.0"
arraydeque = "0.5.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version="0.4.45" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version="0.4.45", features = ["wasmbind"]}

[dev-dependencies]
parameter-on-off = { path = "../../../foundation/parameter-on-off" }

[lints]
workspace = true
