[package]
name = "bpm_detection_midi"
version = "0.1.0"
edition = "2024"

[dependencies]
bpm_detection_config = { path = "../../domain/bpm_detection_config" }
bpm_detection_core = { path = "../../domain/bpm_detection_core" }
build = { path = "../../../support/build" }
errors = { path = "../../../support/errors" }
sync = { path = "../../../support/sync" }

chrono = "0.4.45"
itertools = "0.15.0"
log = "0.4.33"
midir = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
wmidi = "4.0.11"

[target.'cfg(target_os = "macos")'.dependencies]
coremidi-hotplug-notification = "0.1.4"
coremidi = { workspace = true }

[lints]
workspace = true
